[project]
name = "the-best-pymc-example"
version = "0.1.0"
description = "The best PyMC example but in marimo."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arviz>=0.22.0",
    "marimo>=0.18.4",
    "matplotlib>=3.10.8",
    "numba>=0.63.1",
    "numpy>=2.3.5",
    "nutpie>=0.16.4",
    "pandas>=2.3.3",
    "pymc>=5.26.1",
    "pytensor>=2.35.1",
    "scipy>=1.16.3",
    "xarray>=2025.12.0",
]
